--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="top_wrapper">
                 <div class="logo">
                     <a href="/">
-                        <img src="/image/logo.svg" alt="logo">
+                        <img src="image/logo.svg" alt="logo">
                     </a> 
                     <div class="logo_text">
                         <a href="/">
@@ -51,17 +51,17 @@
                     </div>
                     <ul class="social-menu">
                         <li class="social-viber"><a href="viber://chat?number= 380661389781" target="_blank">
-                            <img src="/image/icon/viber-logo-14126.svg" alt="viber">
+                            <img src="image/icon/viber-logo-14126.svg" alt="viber">
                         </a></li>
                         <li class="social-instagram"><a href="https://www.instagram.com/crafto_pryanik/" target="_blank">
-                            <img src="/image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;>
+                            <img src="image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;>
                         </a></li>
                     </ul>
                 </div>
                 <div class="basket">
                     <div class="basket_icon">
                         <a href="#">
-                            <img src="/image/icon/backet.svg" alt="backet">                            
+                            <img src="image/icon/backet.svg" alt="backet">                            
                         </a>
                         <p class= "basket_text">Кошик</p>
                     </div>
@@ -100,7 +100,7 @@
                 <div class="catalog_cart">
 
                     <div class="cart" data-id ="01">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №1</div>
                             <div class="info_cart">Під замовлення</div>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="cart" data-id ="02">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №2</div>
                             <div class="info_cart info_cart_one">В наявності</div>
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="cart" data-id ="03">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №3</div>
                             <div class="info_cart">Під замовлення</div>
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="cart" data-id ="04">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №4</div>
                             <div class="info_cart info_cart_one">В наявності</div>
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="cart" data-id ="05">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №5</div>
                             <div class="info_cart">Під замовлення</div>
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="cart" data-id ="06">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №6</div>
                             <div class="info_cart info_cart_one">В наявності</div>
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="cart" data-id ="07">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №7</div>
                             <div class="info_cart">Під замовлення</div>
@@ -170,7 +170,7 @@
                     </div>
 
                     <div class="cart" data-id ="08">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №8</div>
                             <div class="info_cart info_cart_one">В наявності</div>
@@ -180,7 +180,7 @@
                     </div>
 
                     <div class="cart" data-id ="09">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №9</div>
                             <div class="info_cart info_cart_one">В наявності</div>
@@ -190,7 +190,7 @@
                     </div>
 
                     <div class="cart" data-id ="010">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №10</div>
                             <div class="info_cart">Під замовлення</div>
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="cart" data-id ="011">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №11</div>
                             <div class="info_cart">Під замовлення</div>
@@ -210,7 +210,7 @@
                     </div>
 
                     <div class="cart" data-id ="012">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №12</div>
                             <div class="info_cart">Під замовлення</div>
@@ -220,7 +220,7 @@
                     </div>
 
                     <div class="cart" data-id ="013">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №13</div>
                             <div class="info_cart">Під замовлення</div>
@@ -230,7 +230,7 @@
                     </div>
 
                     <div class="cart" data-id ="014">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №14</div>
                             <div class="info_cart">Під замовлення</div>
@@ -240,7 +240,7 @@
                     </div>
 
                     <div class="cart" data-id ="015">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №15</div>
                             <div class="info_cart">Під замовлення</div>
@@ -250,7 +250,7 @@
                     </div>
 
                     <div class="cart" data-id ="016">
-                        <a href="/product.html"><img class="cart_img" src="/image/cart_1.jpg" alt="pryanik"></a>
+                        <a href="/product.html"><img class="cart_img" src="image/cart_1.jpg" alt="pryanik"></a>
                         <div class="catalog-box_category">
                             <div class="number_cart">Пряник №16</div>
                             <div class="info_cart">Під замовлення</div>
@@ -287,8 +287,8 @@
                         <a href="tel:+380661389781" class="telephone">+38 (066) 138 97 81</a>
                     </div>
                     <ul class="social-menu">
-                        <li class="social-viber"><a href="viber://chat?number=+380661389781" target=_blank"><img src="/image/icon/viber-logo-14126.svg" alt="viber"></a></li>
-                        <li class="social-instagram"><a href="https://www.instagram.com/crafto_pryanik/" target="_blank"><img src="/image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;></a></li>
+                        <li class="social-viber"><a href="viber://chat?number=+380661389781" target=_blank"><img src="image/icon/viber-logo-14126.svg" alt="viber"></a></li>
+                        <li class="social-instagram"><a href="https://www.instagram.com/crafto_pryanik/" target="_blank"><img src="image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;></a></li>
                     </ul>
                 </div>
             </div>
