--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@
        </div>
 
     </div>
-    <script src="/js/calcCartPrice.js"></script>
-    <script src="/js/basketItems.js"></script>   
+    <script src="js/calcCartPrice.js"></script>
+    <script src="js/basketItems.js"></script>   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-    <script src="/js/slider.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/form.js"></script> 
+    <script src="js/slider.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/form.js"></script> 
     <script src="js/script.js"></script>
-    <script src="/js/localStorage.js"></script>    
-    <script src="/js/toggleCartStatus.js"></script>    
+    <script src="js/localStorage.js"></script>    
+    <script src="js/toggleCartStatus.js"></script>    
 </body>
 </html>
