--- a/basket.html
+++ b/basket.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Імбирні пряники ручної роботи на заказ. Crafto-пряник</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -21,7 +21,7 @@
             <div class="top_wrapper">
                 <div class="logo">
                     <a href="/">
-                        <img src="/image/logo.svg" alt="logo">
+                        <img src="image/logo.svg" alt="logo">
                     </a> 
                     <div class="logo_text">
                         <a href="/">
@@ -45,17 +45,17 @@
                     </div>
                     <ul class="social-menu">
                         <li class="social-viber"><a href="viber://chat?number=crafto_pryanik" target="_blank">
-                            <img src="/image/icon/viber-logo-14126.svg" alt="viber">
+                            <img src="image/icon/viber-logo-14126.svg" alt="viber">
                         </a></li>
                         <li class="social-instagram"><a href="https://www.instagram.com/crafto_pryanik/" target="_blank">
-                            <img src="/image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;>
+                            <img src="image/icon/instagram-logo-5544 1instagram_icon.svg" alt="instagram" max-width: 50px;>
                         </a></li>
                     </ul>
                 </div>
                 <div class="basket">
                     <div class="basket_icon">
                         <a href="#">
-                            <img src="/image/icon/backet.svg" alt="backet">                            
+                            <img src="image/icon/backet.svg" alt="backet">                            
                         </a>
                         <p class= "basket_text">Кошик</p>
                     </div>
@@ -193,12 +193,12 @@
 
         </div>
     </div>
-    <script src="/js/calcCartPrice.js"></script>
-    <script src="/js/basketItems.js"></script>    
+    <script src="js/calcCartPrice.js"></script>
+    <script src="js/basketItems.js"></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> 
-    <script src="/js/form.js"></script> 
-    <script src="/js/basket.js"></script>
-    <script src="/js/script.js"></script> 
-    <script src="/js/localStorage.js"></script>    
+    <script src="js/form.js"></script> 
+    <script src="js/basket.js"></script>
+    <script src="js/script.js"></script> 
+    <script src="js/localStorage.js"></script>    
 </body>
 </html>
